disabled-apps/nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "nginx.bergtobias.com"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
